<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:key="screenMain">
	

	<androidx.preference.PreferenceCategory
		android:title="Data Compression">
		<androidx.preference.CheckBoxPreference android:title="Data Compression"
			android:key="data_compression" 
			android:summary="Compresses and speed up data transfer for files/data that can be compressed. NOT recommended for low memory device" 
			android:defaultValue="true" />
	</androidx.preference.PreferenceCategory>
	
	<androidx.preference.PreferenceCategory
	    android:title="Ping Utility">

		<androidx.preference.CheckBoxPreference
			android:key="auto_ping"
			android:summary="Pinger with url for keep-alive connection, used for stabilizing and prevent your connection from sleep."
			android:title="Auto Ping" />

		<com.slipkprojects.sockshttp.view.SummaryEditTextPreference
            android:dependency="auto_ping"
            android:key="ping_server"
            android:title="Ping Server"
			android:summary="Set ping server"
			android:defaultValue="clients3.google.com"
		    android:dialogLayout="@layout/pref_dialog_edittext_fix" />

	</androidx.preference.PreferenceCategory>
	
	
	<androidx.preference.PreferenceCategory
		android:title="@string/category_tunnel">
		
		<androidx.preference.Preference
            android:key="screenSSHSettings"
			app:fragment="com.slipkprojects.sockshttp.preference.SettingsSSHPreference"
            android:title="@string/settings_ssh"/>


		<androidx.preference.Preference
            android:key="screenDNSSettings"
			app:fragment="com.slipkprojects.sockshttp.preference.SlowDNSPreference"
            android:title="@string/slowdns_configuration"/>

	</androidx.preference.PreferenceCategory>
	
	<androidx.preference.PreferenceCategory
		android:title="@string/category_forward_udp">

		<androidx.preference.CheckBoxPreference
			android:key="udpForward"
			android:summary="@string/summary_forward_udp"
			android:title="@string/title_forward_udp" />

		<com.slipkprojects.sockshttp.view.SummaryEditTextPreference
            android:key="udpResolver"
            android:title="@string/title_resolver_udp"
            android:summary="@string/summary_resolver_udp"
            android:dialogMessage=""
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_edittext_fix" />

	</androidx.preference.PreferenceCategory>
	
	
	<androidx.preference.PreferenceCategory
		android:title="@string/category_forward_dns">
		
		<androidx.preference.CheckBoxPreference
			android:key="dnsForward"
			android:summary="@string/summary_forward_dns"
			android:title="@string/title_forward_dns" />
		
		
		
		<com.slipkprojects.sockshttp.view.SummaryEditTextPreference
            android:key="dnsResolver"
            android:title="@string/title_dns_primary"
            android:summary="@string/summary_dns_primary"
            android:dialogMessage="@string/dialog_message_dns_primary"
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_edittext_fix" />
		
		
		<androidx.preference.Preference
			android:title="Custom DNS"
			android:key="openDnsCustom"/>
		
		
	</androidx.preference.PreferenceCategory>
	
	
	<androidx.preference.PreferenceCategory
		android:title="">
		
		<androidx.preference.ListPreference
        	android:key="modeNight"
        	android:entries="@array/pref_modoNoturno_option_labels"
        	android:entryValues="@array/pref_modoNoturno_option_values"
		/>
		
		<com.slipkprojects.sockshttp.view.SummaryEditTextPreference
            android:key="pingerSSH"
            android:title="@string/title_ping_time"
			android:maxLength="3"
            android:summary="@string/no_value"
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_number"
		/>
		
		<androidx.preference.CheckBoxPreference
			android:key="autoClearLogs"
			android:summary="@string/summary_auto_clear_log"
			android:title="@string/title_auto_clear_log"
		/>

		<androidx.preference.CheckBoxPreference
			android:key="hideLog"
			android:summary="@string/summary_hide_log"
			android:title="@string/title_hide_log"
		/>
		
	</androidx.preference.PreferenceCategory>
	
	
	<androidx.preference.PreferenceCategory
		android:title="@string/category_user_interface">
	
		<androidx.preference.ListPreference
        	android:key="idioma"
			android:defaultValue="default"
        	android:entries="@array/pref_idioma_option_labels"
        	android:entryValues="@array/pref_idioma_option_values"
        	android:title="@string/title_language"
		/>
		
	</androidx.preference.PreferenceCategory>
	
	
	<androidx.preference.Preference
    	android:key="screenAdvancedSettings"
		app:fragment="com.slipkprojects.sockshttp.preference.SettingsAdvancedPreference"
        android:title="@string/category_advanced_settings"
	/>
	
	
</androidx.preference.PreferenceScreen>
