<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	
	<include
		layout="@layout/activity_sobre"/>
	
	<ScrollView
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<androidx.cardview.widget.CardView
			android:layout_width="fill_parent"
			android:layout_height="match_parent"
			app:cardBackgroundColor="@color/colorSecondaryBackground"
			app:cardCornerRadius="4.0dip"
			app:cardElevation="3.0dip"
			android:layout_margin="3dp">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/colorSecondaryBackground"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
			android:paddingTop="10dp">

			<TextView
				android:text="@string/wizard_details"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="15px"
				android:textStyle="bold"
				android:textColor="#386BDD"/>

			<TextView
				android:text="@string/wizard_details_msg"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:textColorLink="@color/colorText"
				android:textColor="@color/colorText"/>

			<TextView
				android:text="@string/payload_details"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="15px"
				android:textStyle="bold"
				android:textColor="#386BDD"/>

			<TextView
				android:text="@string/payload_details_msg"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/colorText"/>

			<TextView
				android:text="Version: "
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="15px"
				android:textStyle="bold"
				android:textColor="#314EDB"/>

			<TextView
				android:text="- Unknown -"
				android:id="@+id/versionName"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:textColor="@color/colorText"/>

			<TextView
				android:text="Special Thanks:"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:textColor="#314EDB"
				android:paddingTop="15px"
				android:textStyle="bold"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="Leeroy"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="SocksHttp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="Nutro World"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="~Mighty Beast"/>

			<TextView
				android:text="@string/project_home"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="15px"
				android:textStyle="bold"
				android:textColor="#2C3EC5"
				android:visibility="gone"/>

			<TextView
				android:text="mahlx.com"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:textColorLink="#C82217"
				android:textColor="@color/colorText"
				android:visibility="gone"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:paddingTop="15px"
				android:visibility="gone">

				<TextView
					android:text="Outros:"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:textColor="#2E4AC5"
					android:visibility="gone"/>

				<Button
					android:id="@+id/activity_aboutShowLicenseButton"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/show_license"/>

			</LinearLayout>

			<TextView
				android:text="@string/title_agradecimento_especial"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="15px"
				android:textStyle="bold"
				android:textColor="#2C3EC5"
				android:visibility="gone"/>

			<TextView
				android:id="@+id/activity_aboutAgradecimentosTextView"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:autoLink="web"
				android:textColorLink="#C82217"
				android:textColor="@color/colorText"
				android:visibility="gone"/>

			<androidx.cardview.widget.CardView
				android:padding="5.0dip"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				app:cardBackgroundColor="@color/colorSecondaryBackground"
				app:cardCornerRadius="3.0dip"
				app:cardElevation="10.0dip"
				android:layout_marginTop="10dp"
				android:id="@+id/iphunter_layout"
				android:visibility="gone">

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:paddingLeft="10dp"
					android:paddingTop="4dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="IP Hunter"
						android:textColor="#FF000000"
						android:textStyle="bold"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Search local IP address"/>

				</LinearLayout>

			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
				android:padding="5.0dip"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				app:cardBackgroundColor="@color/colorSecondaryBackground"
				app:cardCornerRadius="3.0dip"
				app:cardElevation="10.0dip"
				android:layout_marginTop="10dp"
				android:id="@+id/hostchecker_layout"
				android:visibility="gone">

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="50dp"
					android:paddingLeft="10dp"
					android:paddingTop="4dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Host Checker"
						android:textColor="#FF000000"
						android:textStyle="bold"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="Check host header information"/>

				</LinearLayout>

			</androidx.cardview.widget.CardView>

		</LinearLayout>
		
		</androidx.cardview.widget.CardView>

	</ScrollView>

</LinearLayout>

